fix fetchShifts for employee Requests

--- a/frontend/src/features/employee-constraints/index.css
+++ b/frontend/src/features/employee-constraints/index.css
@@ -11,6 +11,7 @@
 
 }
 
+
 /* ============================================
     TABLE AND GRID STRUCTURE
   ============================================ */
@@ -21,8 +22,8 @@
     box-shadow: var(--shadow-base);
 }
 
-.employee-constraints-container .desktop-constraints .table-responsive::-webkit-scrollbar {
-    display: none;
+.employee-constraints-container .desktop-constraints .table-responsive {
+    overflow-x: hidden;
 }
 
 [data-theme="dark"] #root > div > main > div > div.employee-constraints-container.position-relative.container-fluid > div.p-0.card {
@@ -116,6 +117,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
+    opacity: 0.8;
 }
 
 .employee-constraints-container .shift-header-name {
@@ -256,8 +258,9 @@
 @media (max-width: 888px) {
     .employee-constraints-container {
         padding-top: 0.5rem;
-
+        max-width: 600px;
     }
+
 
     .mobile-constraints table {
         font-size: 0.875rem;
