--- a/frontend/src/features/employee-schedule/index.css
+++ b/frontend/src/features/employee-schedule/index.css
@@ -3,29 +3,36 @@
 /* Container */
 .employee-schedule-container {
     padding: 1rem;
-    max-width: 1400px;
+    max-width: 1200px;
     margin-bottom: 58px;
 }
+
 [data-theme="dark"] .employee-schedule-container .page-header-card {
     background-color: var(--bs-gray-900);
 
 }
 
 .week-schedule-section {
-    border-color: var(--bs-gray-200)!important;
+    border-color: var(--bs-gray-200) !important;
     box-shadow: var(--shadow-sm);
-    border-radius: var(--radius-lg)!important;
+    border-radius: var(--radius-lg) !important;
 }
+
 [data-theme="dark"] .week-schedule-section {
-    border-color: var(--bs-gray-800)!important;
+    border-color: var(--bs-gray-800) !important;
 
 }
 
+.week-schedule-section.personal-schedule {
+    max-width: 800px;
+    margin: 0 auto;
+}
 
 .employee-schedule-container .page-header-card {
     border-color: var(--bs-gray-200);
     box-shadow: var(--bs-box-shadow-sm);
 }
+
 [data-theme="dark"] .employee-schedule-container .page-header-card {
     background-color: var(--bs-gray-900);
     border-color: var(--bs-gray-900);
@@ -34,23 +41,27 @@
 }
 
 
-.full-schedule-toggle.form-check-input{
+.full-schedule-toggle.form-check-input {
     height: 1.25rem;
     margin-inline-end: 0.25rem;
 }
+
 /* Mobile Responsive */
 @media (max-width: 767px) {
     .employee-schedule-container {
         padding: 0.5rem;
     }
+
     .employee-schedule-container {
         padding-bottom: 0.25rem;
     }
+
     .employee-schedule-container .page-header {
         padding: 0;
     }
+
     .employee-schedule-container .page-header-card {
-        margin-bottom: 0.5rem!important;
+        margin-bottom: 0.5rem !important;
     }
 
 
@@ -64,6 +75,7 @@
         /*display: flex;*/
         justify-content: center;
     }
+
     .employee-schedule-tabs::before {
         height: 45px;
     }
